--- a/src/components/home-square/home-square.html
+++ b/src/components/home-square/home-square.html
@@ -1,6 +1,6 @@
 <ion-grid class="grid" no-padding>
   <ion-row class="row">
-    <ion-col col-4 col-lg-4 col-md-6 col-sm-4 col-xl-2 text-center>
+    <ion-col col-4 text-center class="col">
       <button>
         <ion-icon color="primary" [name]="item?.icon" role="img"></ion-icon>
         <br> {{item?.title}}
@@ -8,7 +8,7 @@
       </button>
     </ion-col>
 
-    <ion-col col-4 col-lg-4 col-md-6 col-sm-4 col-xl-2 text-center>
+    <ion-col col-4 text-center class="col">
       <button>
         <ion-icon color="primary" [name]="item?.icon" role="img"></ion-icon>
         <br> {{item?.title}}
@@ -16,17 +16,7 @@
       </button>
     </ion-col>
 
-    <ion-col col-4 col-lg-4 col-md-6 col-sm-4 col-xl-2 text-center>
-      <button>
-        <ion-icon color="primary" [name]="item?.icon" role="img"></ion-icon>
-        <br> {{item?.title}}
-
-      </button>
-    </ion-col>
-  </ion-row>
-
-  <ion-row class="row">
-    <ion-col col-4 col-lg-4 col-md-6 col-sm-4 col-xl-2 text-center>
+    <ion-col col-4 text-center class="col">
       <button>
         <ion-icon color="primary" [name]="item?.icon" role="img"></ion-icon>
         <br> {{item?.title}}
@@ -34,20 +24,6 @@
       </button>
     </ion-col>
 
-    <ion-col col-4 col-lg-4 col-md-6 col-sm-4 col-xl-2 text-center>
-      <button>
-        <ion-icon color="primary" [name]="item?.icon" role="img"></ion-icon>
-        <br> {{item?.title}}
 
-      </button>
-    </ion-col>
-
-    <ion-col col-4 col-lg-4 col-md-6 col-sm-4 col-xl-2 text-center>
-      <button>
-        <ion-icon color="primary" [name]="item?.icon" role="img"></ion-icon>
-        <br> {{item?.title}}
-
-      </button>
-    </ion-col>
   </ion-row>
 </ion-grid>
