Added load data button

--- a/src/components/highchart/highchart.html
+++ b/src/components/highchart/highchart.html
@@ -1,1 +1,6 @@
+<ion-buttons start>
+    <button ion-button (click)="updateData()">
+        Load Data
+    </button>
+</ion-buttons>
 <div [ng2-highcharts]="chartData"></div>
